--- a/style.css
+++ b/style.css
@@ -405,7 +405,7 @@ th.nombre, td.nombre {
     max-width: 380px;
     position: -webkit-sticky !important;
     position: sticky !important;
-    left: 55px !important;
+    left: 0 !important;
     z-index: 3 !important;
     background: #fff !important;
     border-right: 2px solid #bdbdbd !important;
@@ -886,7 +886,7 @@ tbody tr:has(td.nombre:focus-within) td.nombre,
 tbody tr.fila-focus-activa td.nombre {
     position: -webkit-sticky !important;
     position: sticky !important;
-    left: 55px !important;
+    left: 0 !important;
     z-index: 9999 !important;
     background: inherit !important;
 }
